--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,44 @@ add_subdirectory(external/spdlog)
 add_subdirectory(camera-pipes)
 add_subdirectory(http-bridge)
 add_subdirectory(vid-enc)
+
+add_custom_command(
+	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/external/jquery
+	
+	COMMAND npm run build
+
+	DEPENDS external/jquery/src/jquery.js
+
+	OUTPUT 
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.js"
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.min.js"
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.min.map"
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.slim.js"
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.slim.min.js"
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.slim.min.map"
+
+	VERBATIM
+)
+
+add_custom_target(jquery
+	DEPENDS
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.js"
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.min.js"
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.min.map"
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.slim.js"
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.slim.min.js"
+		"${PROJECT_SOURCE_DIR}/external/jquery/dist/jquery.slim.min.map"
+)
+
+add_dependencies(vid-enc
+	jquery
+)
+
+#INSTALL(
+#	TARGETS
+#		jquery
+#	DESTINATION
+#		var/www
+#)
+
+include(CPack)
