--- a/vid-enc/CMakeLists.txt
+++ b/vid-enc/CMakeLists.txt
@@ -30,3 +30,10 @@ target_include_directories(vid-enc
 	PUBLIC
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
+
+INSTALL(
+	TARGETS
+		vid-enc
+	DESTINATION
+		bin
+)
