--- a/camera-pipes/CMakeLists.txt
+++ b/camera-pipes/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(camera-pipes
 
 	pipeline/camera/Logitech_brio_pipe.cpp
 	pipeline/camera/Logitech_C525_gst.cpp
+	pipeline/camera/Testsrc_pipe.cpp
 
 	pipeline/display/autovideosink_pipe.cpp
 
