dont stuff frames till its turned on

--- a/camera-pipes/CMakeLists.txt
+++ b/camera-pipes/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(camera-pipes
 	pipeline/GST_pipeline_base.cpp
 	pipeline/mux_pipe.cpp
 	pipeline/valve_pipe.cpp
+	pipeline/gst_common.cpp
 )
 
 target_link_libraries(camera-pipes
