--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,9 +108,9 @@ INSTALL(
 
 INSTALL(
 	FILES
-		"${PROJECT_SOURCE_DIR}/conf/etc/rules.d/99-uvc.rules"
+		"${PROJECT_SOURCE_DIR}/conf/etc/udev/rules.d/99-uvc.rules"
 	DESTINATION
-		/etc/rules.d
+		/etc/udev/rules.d
 )
 
 set(CPACK_SET_DESTDIR true)
