--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,7 @@ INSTALL(
 
 INSTALL(
 	FILES
-		"${PROJECT_SOURCE_DIR}/conf/etc/nginx/sites-available/cam-pod"
+		"${PROJECT_SOURCE_DIR}/conf/etc/nginx/sites-available/opaleye"
 	DESTINATION
 		/etc/nginx/sites-available
 )
@@ -113,11 +113,27 @@ INSTALL(
 		/etc/udev/rules.d
 )
 
+INSTALL(
+	FILES
+		"${PROJECT_SOURCE_DIR}/conf/etc/ptp4l.conf"
+	DESTINATION
+		/etc
+)
+
+INSTALL(
+	FILES
+		scripts/opaleye.service
+		scripts/ptp4l.service
+	DESTINATION
+		/lib/systemd/system
+)
+
+
 set(CPACK_SET_DESTDIR true)
-set(CPACK_INSTALL_PREFIX /opt/suburbanmarine/cam-pod)
+set(CPACK_INSTALL_PREFIX /opt/suburbanmarine/opaleye)
 set(CPACK_GENERATOR "DEB")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "SM")
-set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${PROJECT_SOURCE_DIR}/scripts/postinst;${PROJECT_SOURCE_DIR}/scripts/postrm")
+set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${PROJECT_SOURCE_DIR}/scripts/postinst;${PROJECT_SOURCE_DIR}/scripts/prerm;${PROJECT_SOURCE_DIR}/scripts/postrm")
 # gstreamer1.0-vaapi, gstreamer1.0-omx-generic
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "libgstreamer1.0-0, libgstreamer-plugins-base1.0-0, libgstreamer-plugins-good1.0-0, libgstreamer-plugins-bad1.0-0, libgstreamermm-1.0-1, libfcgi0ldbl")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libgstreamer1.0-0, libgstreamer-plugins-base1.0-0, libgstreamer-plugins-good1.0-0, libgstreamer-plugins-bad1.0-0, libgstreamermm-1.0-1, libfcgi0ldbl, liblockfile1")
 include(CPack)
