--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ target_include_directories(jsonrpc-lean
 
 add_subdirectory(libs/camera-pipes)
 add_subdirectory(libs/http-bridge)
-add_subdirectory(vid-enc)
+add_subdirectory(opaleye)
 add_subdirectory(site)
 
 # add_custom_command(
