set a runtime dir

--- a/scripts/opaleye.service
+++ b/scripts/opaleye.service
@@ -9,6 +9,7 @@ RemainAfterExit=yes
 ExecStart=/opt/suburbanmarine/opaleye/bin/opaleye
 User=opaleye
 Group=opaleye
+RuntimeDirectory=opaleye
 
 [Install]
 Alias=opaleye.service
