don't require chrony yet

--- a/scripts/opaleye.service
+++ b/scripts/opaleye.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=opaleye
-Requires=network.target ptp4l.service chronyd.service
+# Requires=network.target ptp4l.service chronyd.service
+Requires=network.target
 After=network.target
 
 [Service]
