--- a/libs/camera-pipes/CMakeLists.txt
+++ b/libs/camera-pipes/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(camera-pipes
 	pipeline/camera/Logitech_brio_pipe.cpp
 	pipeline/camera/Logitech_C525_gst.cpp
 	pipeline/camera/Testsrc_pipe.cpp
+	pipeline/camera/v4l2_webcam_pipe.cpp
 
 	pipeline/display/autovideosink_pipe.cpp
 
