--- a/opaleye/CMakeLists.txt
+++ b/opaleye/CMakeLists.txt
@@ -12,6 +12,8 @@ add_executable(opaleye
 	http_req_jpeg.cpp
 	http_req_jsonrpc.cpp
 
+	sensor_thread.cpp
+
 	signal_handler.cpp
 )
 
@@ -19,6 +21,7 @@ target_link_libraries(opaleye
 	PUBLIC
 		camera-pipes
 		http-bridge
+		sensors
 
 		jsonrpc-lean
 
