--- a/libs/sensors/CMakeLists.txt
+++ b/libs/sensors/CMakeLists.txt
@@ -1,15 +1,16 @@
-add_library(sensors
+add_library(opaleye_sensors
 	TSYS01.cpp
 	MS5837-30BA.cpp
+	linux_thermal_zone.cpp
 )
 
-target_link_libraries(sensors
+target_link_libraries(opaleye_sensors
 	hal
 	
 	spdlog::spdlog
 )
 
-target_include_directories(sensors
+target_include_directories(opaleye_sensors
 	PUBLIC
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
