--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ add_subdirectory(libs/camera-pipes)
 add_subdirectory(libs/http-bridge)
 add_subdirectory(libs/hal)
 add_subdirectory(libs/sensors)
+add_subdirectory(libs/opaleye-util)
 add_subdirectory(opaleye)
 add_subdirectory(site)
 
