--- a/conf/etc/samba/smb.conf
+++ b/conf/etc/samba/smb.conf
@@ -258,3 +258,8 @@
 # to the drivers directory for these users to have write rights in it
 ;   write list = root, @lpadmin
 
+[sambashare]
+    comment = Opaleye Storage
+    path = /mnt/video/opaleye
+    read only = no
+    browsable = yes
