--- a/conf/etc/samba/smb.conf
+++ b/conf/etc/samba/smb.conf
@@ -258,8 +258,12 @@
 # to the drivers directory for these users to have write rights in it
 ;   write list = root, @lpadmin
 
-[sambashare]
-    comment = Opaleye Storage
-    path = /mnt/video/opaleye
-    read only = no
-    browsable = yes
+[opaleye]
+   comment = Opaleye Storage
+   path = /mnt/video/opaleye
+   read only = no
+   browsable = yes
+   guest ok = yes
+   guest account = opaleye
+   create mask = 0775
+   directory mask = 0755
