--- a/conf/etc/samba/smb.conf
+++ b/conf/etc/samba/smb.conf
@@ -263,6 +263,7 @@
    path = /mnt/video/opaleye
    read only = no
    browsable = yes
+   writeable = yes
    guest ok = yes
    guest account = opaleye
    create mask = 0775
