--- a/conf/etc/samba/smb.conf
+++ b/conf/etc/samba/smb.conf
@@ -266,5 +266,6 @@
    writeable = yes
    guest ok = yes
    guest account = opaleye
+   force user = opaleye
    create mask = 0775
    directory mask = 0755
