--- a/conf/etc/samba/smb.conf
+++ b/conf/etc/samba/smb.conf
@@ -259,13 +259,13 @@
 ;   write list = root, @lpadmin
 
 [opaleye]
-   comment = Opaleye Storage
-   path = /mnt/video/opaleye
-   read only = no
-   browsable = yes
-   writeable = yes
-   guest ok = yes
-   guest account = opaleye
-   force user = opaleye
-   create mask = 0775
+   comment        = Opaleye Storage
+   path           = /mnt/video/opaleye
+   browsable      = yes
+   writeable      = yes
+   guest ok       = yes
+   guest only     = yes
+   guest account  = opaleye
+   force user     = opaleye
+   create mask    = 0775
    directory mask = 0755
