default security permissions

--- a/conf/etc/samba/smb.conf
+++ b/conf/etc/samba/smb.conf
@@ -267,5 +267,11 @@
    guest only     = yes
    guest account  = opaleye
    force user     = opaleye
-   create mask    = 0775
-   directory mask = 0755
+   create mask                   = 0775
+   force create mode             = 000
+   security mask                 = 0777
+   force security mode           = 000
+   directory mask                = 0755
+   force directory mode          = 000
+   directory security mask       = 0777
+   force directory security mode = 000
