disable extensions, remove deprecated things, make no-exec default

--- a/conf/etc/samba/smb.conf
+++ b/conf/etc/samba/smb.conf
@@ -259,18 +259,17 @@
 ;   write list = root, @lpadmin
 
 [opaleye]
-   comment        = Opaleye Storage
-   path           = /mnt/video/opaleye
-   browsable      = yes
-   writeable      = yes
-   guest ok       = yes
-   guest only     = yes
-   guest account  = opaleye
-   force user     = opaleye
-   create mask                   = 0775
+   comment         = Opaleye Storage
+   path            = /mnt/video/opaleye
+   browsable       = yes
+   writeable       = yes
+   guest ok        = yes
+   guest only      = yes
+   guest account   = opaleye
+   force user      = opaleye
+   unix extensions = no
+   create mask                   = 0664
    force create mode             = 000
-   security mask                 = 0777
-   force security mode           = 000
    directory mask                = 0755
    force directory mode          = 000
    directory security mask       = 0777
