--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,10 +171,10 @@ INSTALL(
 		/lib/systemd/system
 )
 
-if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
-	set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR}}
-	set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR}}
-	set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH}}
+if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
+	set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+	set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
+	set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
 endif()
 
 set(CPACK_SET_DESTDIR true)
