put nvidia stuff in own lib

--- a/libs/camera-pipes/CMakeLists.txt
+++ b/libs/camera-pipes/CMakeLists.txt
@@ -1,3 +1,15 @@
+add_library(camera-pipes-nv
+	pipeline/encode/h264_nvenc_bin.cpp
+	pipeline/decode/jpeg_nvdec_bin.cpp
+	pipeline/Thumbnail_nv_pipe.cpp
+	pipeline/Thumbnail_nv2_pipe.cpp
+)
+
+target_link_libraries(camera-pipes-nv
+	PUBLIC
+		camera-pipes
+)
+
 add_library(camera-pipes
 	#cameras/Logitech_brio.cpp
 	#cameras/UVC_base.cpp
@@ -11,10 +23,8 @@ add_library(camera-pipes
 	pipeline/display/autovideosink_pipe.cpp
 
 	pipeline/decode/jpeg_swdec_bin.cpp
-	pipeline/decode/jpeg_nvdec_bin.cpp
 
 	pipeline/encode/h264_swenc_bin.cpp
-	pipeline/encode/h264_nvenc_bin.cpp
 
 	pipeline/storage/mkv_splitmuxsink.cpp
 	pipeline/storage/mp4_splitmuxsink.cpp
@@ -37,8 +47,6 @@ add_library(camera-pipes
 	pipeline/GST_interpipesrc.cpp
 	pipeline/GST_interpipesink.cpp
 	pipeline/Thumbnail_sw_pipe.cpp
-	pipeline/Thumbnail_nv_pipe.cpp
-	pipeline/Thumbnail_nv2_pipe.cpp
 )
 
 target_link_libraries(camera-pipes
