--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ pkg_check_modules(GSTRTSP
 )
 
 add_subdirectory(external/spdlog)
+add_subdirectory(external/googletest)
 
 add_library(jsonrpc-lean INTERFACE)
 target_include_directories(jsonrpc-lean
