--- a/opaleye/CMakeLists.txt
+++ b/opaleye/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(opaleye
 target_link_libraries(opaleye
 	PUBLIC
 		camera-pipes
+		camera-pipes-nv
 		http-bridge
 		opaleye_sensors
 
