--- a/external/nvidia-jetpack/CMakeLists.txt
+++ b/external/nvidia-jetpack/CMakeLists.txt
@@ -1,3 +1,31 @@
+add_library(jetson_multimedia_api_common
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvApplicationProfiler.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvBuffer.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvDrmRenderer.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvEglRenderer.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvElement.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvElementProfiler.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvJpegDecoder.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvJpegEncoder.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvLogging.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvUtils.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvV4l2Element.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvV4l2ElementPlane.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvVideoConverter.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvVideoDecoder.cpp
+	/usr/src/jetson_multimedia_api/samples/common/classes/NvVideoEncoder.cpp
+)
+target_include_directories(jetson_multimedia_api_common
+	PRIVATE
+		/usr/src/jetson_multimedia_api/include
+		/usr/src/jetson_multimedia_api/include/libjpeg-8b
+		/usr/src/jetson_multimedia_api/samples/common/algorithm/cuda
+		/usr/src/jetson_multimedia_api/samples/common/algorithm/trt
+		/usr/local/cuda/include
+		/usr/include/libdrm
+		/usr/include/opencv4
+)
+
 add_library(nvidia-jetpack INTERFACE)
 
 target_include_directories(nvidia-jetpack
@@ -13,6 +41,8 @@ target_include_directories(nvidia-jetpack
 
 target_link_libraries(nvidia-jetpack
 	INTERFACE
+		jetson_multimedia_api_common
+
 		cuda
 		cudart
 		nvbuf_utils
