--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ pkg_check_modules(GSTRTSP
 
 add_subdirectory(external/spdlog)
 add_subdirectory(external/googletest)
-add_subdirectory(external/nvidia-jetpack)
+# add_subdirectory(external/nvidia-jetpack)
 
 add_library(jsonrpc-lean INTERFACE)
 target_include_directories(jsonrpc-lean
