--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,8 @@ pkg_check_modules(GSTRTSP
 		gstreamer-rtsp-1.0
 )
 
+find_package( OpenCV REQUIRED )
+
 add_subdirectory(external/spdlog)
 add_subdirectory(external/googletest)
 # add_subdirectory(external/nvidia-jetpack)
