--- a/libs/camera-pipes/CMakeLists.txt
+++ b/libs/camera-pipes/CMakeLists.txt
@@ -59,7 +59,7 @@ target_link_libraries(camera-pipes
 		${GSTMM_LIBRARIES}
 	#	${GSTRTSP_LIBRARIES}
 
-	#	${OpenCV_LIBS}
+		${OpenCV_LIBS}
 
 		#uvc
 
@@ -75,7 +75,7 @@ target_include_directories(camera-pipes
 		${GST_INCLUDE_DIRS}
 		${GSTMM_INCLUDE_DIRS}
 #		${GSTRTSP_INCLUDE_DIRS}
-#		${OpenCV_INCLUDE_DIRS}
+		${OpenCV_INCLUDE_DIRS}
 )
 
 target_compile_options(camera-pipes
