--- a/libs/camera-pipes/CMakeLists.txt
+++ b/libs/camera-pipes/CMakeLists.txt
@@ -2,13 +2,13 @@ add_library(camera-pipes-nv
 	pipeline/encode/h264_nvenc_bin.cpp
 	pipeline/decode/jpeg_nvdec_bin.cpp
 	pipeline/Thumbnail_nv_pipe.cpp
-	# pipeline/Thumbnail_nv2_pipe.cpp
+	pipeline/Thumbnail_nv2_pipe.cpp
 )
 
 target_link_libraries(camera-pipes-nv
 	PUBLIC
 		camera-pipes
-	#	nvidia-jetpack
+		nvidia-jetpack
 )
 
 add_library(camera-pipes
