rename app class

--- a/opaleye/CMakeLists.txt
+++ b/opaleye/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(
 
 add_executable(opaleye
 	main.cpp
-	gst_app.cpp
+	Opaleye_app.cpp
 	gst_app_mjpeg.cpp
 	gst_filesink_pipeline.cpp
 	gst_framesink_pipeline.cpp
