start of new config format with per-camera pipeline, mutli camera

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ add_subdirectory(libs/sensors)
 add_subdirectory(libs/opaleye-util)
 add_subdirectory(opaleye)
 add_subdirectory(site)
+add_subdirectory(tests)
 
 
 add_executable(jsontest
