wire up a fake imx219 pipeline, check if we have a cam1 before we use it

--- a/libs/camera-pipes/CMakeLists.txt
+++ b/libs/camera-pipes/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(camera-pipes
 	pipeline/camera/Testsrc_pipe.cpp
 	pipeline/camera/v4l2_webcam_pipe.cpp
 	pipeline/camera/v4l2_util.cpp
+	pipeline/camera/nvac_imx219_pipe.cpp
 
 	pipeline/display/autovideosink_pipe.cpp
 
