--- a/libs/camera-pipes/CMakeLists.txt
+++ b/libs/camera-pipes/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(camera-pipes-nv
 	pipeline/decode/jpeg_nvdec_bin.cpp
 	pipeline/Thumbnail_nv_pipe.cpp
 	# pipeline/Thumbnail_nv2_pipe.cpp
+	pipeline/Thumbnail_nv3_pipe.cpp
 )
 
 target_link_libraries(camera-pipes-nv
