rethrow exceptions in thread base to cause program exit. later this could be optional.

--- a/libs/http-bridge/CMakeLists.txt
+++ b/libs/http-bridge/CMakeLists.txt
@@ -11,6 +11,9 @@ add_library(http-bridge
 
 target_link_libraries(http-bridge
 	PUBLIC
+
+		opaleye-util
+
 		Boost::boost
 		Boost::filesystem
 		spdlog::spdlog
