--- a/libs/http-bridge/CMakeLists.txt
+++ b/libs/http-bridge/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(http-bridge
 	http_fcgi_work_thread.cpp
 	http_req_callback_base.cpp
 	http_req_callback_file.cpp
+	http_req_util.cpp
 	http_util.cpp
 	http_common.cpp
 	http_req_error_handler.cpp
