--- a/libs/opaleye-util/CMakeLists.txt
+++ b/libs/opaleye-util/CMakeLists.txt
@@ -3,14 +3,34 @@ add_library(opaleye-util
 	Unit_conv.cpp
 	Stopwatch.cpp
 	thread_base.cpp
+
+	Directory_tree.cpp
 )
 
 target_link_libraries(opaleye-util
+	Boost::boost
+	Boost::filesystem
 	rt
 	spdlog
 )
 
 target_include_directories(opaleye-util
+	PUBLIC
+		${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+add_executable(opaleye-util-tests
+	tests/Directory_tree_tests.cpp
+
+)
+
+target_link_libraries(opaleye-util-tests
+	opaleye-util
+	googletest
+	googletest_main
+)
+
+target_include_directories(opaleye-util-tests
 	PUBLIC
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
