--- a/libs/opaleye-util/CMakeLists.txt
+++ b/libs/opaleye-util/CMakeLists.txt
@@ -21,6 +21,7 @@ target_include_directories(opaleye-util
 
 add_executable(opaleye-util-tests
 	tests/Directory_tree_tests.cpp
+	tests/Directory_tree_node_tests.cpp
 
 )
 
