--- a/scripts/opaleye.service
+++ b/scripts/opaleye.service
@@ -1,8 +1,11 @@
 [Unit]
 Description=opaleye
 # Requires=network.target ptp4l.service chronyd.service
-Requires=network.target
 After=network.target
+Requires=network.target
+After=network-online.target
+Wants=network-online.target
+
 
 [Service]
 Type=simple
