--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,20 @@ target_include_directories(opaleye_config_test
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
 
+add_executable(opaleye_zeromq
+	opaleye_zeromq.cpp
+)
+
+target_link_libraries(opaleye_zeromq
+	PUBLIC
+		zmq
+)
+
+target_include_directories(opaleye_zeromq
+	PUBLIC
+		${CMAKE_CURRENT_SOURCE_DIR}
+)
+
 INSTALL(
 	TARGETS
 		opaleye_config_test
