--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,9 @@ add_subdirectory(external/spdlog)
 add_subdirectory(external/googletest)
 # add_subdirectory(external/nvidia-jetpack)
 
+
+add_subdirectory(external/cppzmq)
+
 add_library(jsonrpc-lean INTERFACE)
 target_include_directories(jsonrpc-lean
 	INTERFACE
