--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,10 +19,28 @@ add_executable(opaleye_zeromq
 
 target_link_libraries(opaleye_zeromq
 	PUBLIC
-		zmq
+		opaleye_app
+
+		cppzmq
 )
 
 target_include_directories(opaleye_zeromq
+	PUBLIC
+		${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+add_executable(opaleye_zeromq_svr
+	opaleye_zeromq_svr.cpp
+)
+
+target_link_libraries(opaleye_zeromq_svr
+	PUBLIC
+		opaleye_app
+
+		cppzmq
+)
+
+target_include_directories(opaleye_zeromq_svr
 	PUBLIC
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
