--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,18 +13,34 @@ target_include_directories(opaleye_config_test
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-add_executable(opaleye_zeromq
-	opaleye_zeromq.cpp
+add_executable(opaleye_zeromq_cli_test
+	opaleye_zeromq_cli_test.cpp
 )
 
-target_link_libraries(opaleye_zeromq
+target_link_libraries(opaleye_zeromq_cli_test
 	PUBLIC
 		opaleye_app
 
 		cppzmq
 )
 
-target_include_directories(opaleye_zeromq
+target_include_directories(opaleye_zeromq_cli_test
+	PUBLIC
+		${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+add_executable(opaleye_zeromq_framegrabber
+	opaleye_zeromq_framegrabber.cpp
+)
+
+target_link_libraries(opaleye_zeromq_framegrabber
+	PUBLIC
+		opaleye_app
+
+		cppzmq
+)
+
+target_include_directories(opaleye_zeromq_framegrabber
 	PUBLIC
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
